--- a/styles/index.css
+++ b/styles/index.css
@@ -3,38 +3,71 @@
     padding: 0;
     font-family: sans-serif;
 }
+/* background of site */
 .background {
     width: 100%;
     height: 100vh;
-    background-image: url(images/futuristic_background.jpg);
-
-}
-/* Add a black background color to navigation bar */
-.topnav {
-    background-color: #333;
+    background-image: url(../images/white_background.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
     overflow: hidden;
-    text-align: center;
+
+}
+
+.logo{
+    width: 100px;
+    cursor: pointer;
+
+}
+.navbar{
+    width: 85%;
+    height: 15%;
     margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
 }
 
-/* styling the links inside nav bar */
-.topnav a {
-    display: inline-block;
-    color: #f2f2f2;
-    font-size: 17px;
-    padding: 14px 14px; 
-    text-decoration: none;
-}
-
-/* change color of links while mouse hovering */
-.topnav a:hover {
-    background-color: #ddd;
+button{
     color: black;
+    padding: 10px 25px;
+    background: transparent;
+    border: 1px solid black;
+    border-radius: 20px; /* makes it circle shape button */
+    outline: none;
+    cursor: pointer; /* changes cursor appearance */
+
 }
 
-/* add color to page we are currently on */
-.topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+.content{
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translateY(-50%);
+    z-index: 2;
 }
 
+h1{
+    font-size: 80px;
+    margin: 10px 0 30px;
+    line-height: 80px;
+}
+
+.side-bar{
+    width:50px;
+    height:100vh;
+    background: linear-gradient(#ccdbcc, #6d736d);
+    position: absolute;
+    right: 0;
+    top:0;
+}
+.menu {
+    display: block;
+    width: 25px;
+    margin: 40px auto 0;
+    cursor: pointer;
+}
